修改了界面链接信息

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_description: Learning notes.
 site_author: ShenMian
 site_url: https://apoxtq.github.io/notes/
 
-repo_name: ShenMian/notes
+repo_name: aopxtq/notes
 repo_url: https://apoxtq.github.io/notes/
 
 # https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/
