--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: Notes
 site_description: Learning notes.
-site_author: ShenMian
+site_author: Apoxtq
 site_url: https://apoxtq.github.io/notes/
 
-repo_name: aopxtq/notes
+repo_name: Apoxtq/notes
 repo_url: https://apoxtq.github.io/notes/
 
 # https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/
