修改了一些文字错误

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,4 +66,4 @@ extra:
   # https://squidfunk.github.io/mkdocs-material/setup/setting-up-the-footer/?h=extra+social#social-links
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/ShenMian
+      link: https://github.com/Apoxtq
